# HEAT

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: boundary.F90  const.F90  control.F90  data.F90  flux.F90  io.F90  lhs.F90  main.F90  mpnt.F90  sparse_mat.F90  sparskit.F90  tags  time_int.F90  types.F90
test/: CMakeLists.txt
test/1D/gradient@left_wall/: Makefile  gridgen.F90
test/1D/zero_gradient@wall/: gridgen.F90
test/1D/zero_temp@wall/: Makefile  gridgen.F90
test/2D/plate_with_heatflux/: Makefile  gridgen.F90
test/chamber/: CMakeLists.txt  gridgen.F90
test/chamber_full/: gridgen.F90
test/gabel_3D/: CMakeLists.txt  Makefile  gridgen.F90
test/junction_2D/: gridgen.F90
test/pipe_2D/: CMakeLists.txt  gridgen.F90
tools/: CMakeLists.txt  module_gridgen.F90  module_post.F90
